[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=1]

[node name="MainMenu" type="VBoxContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -46.5
margin_top = -34.0
margin_right = 46.5
margin_bottom = 34.0
script = ExtResource( 1 )

[node name="ButtonSP" type="Button" parent="."]
margin_right = 93.0
margin_bottom = 20.0
text = "Single player"

[node name="ButtonMP" type="Button" parent="."]
margin_top = 24.0
margin_right = 93.0
margin_bottom = 44.0
text = "Multiplayer"

[node name="ButtonQuit" type="Button" parent="."]
margin_top = 48.0
margin_right = 93.0
margin_bottom = 68.0
text = "Quit"
